--- a/sync.desktop
+++ b/sync.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Type=Application
 Name=Sync
-Exec=/path/to/sync.sh --force
+Exec=/usr/local/bin/sync.sh --force
 Icon=mail-send-receive-symbolic
 Hidden=false
 NoDisplay=false
