--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,4 +1,4 @@
-FROM alpine:3.8
+FROM alpine:3.9
 MAINTAINER Achim Christ
 
 # Install prerequisites
@@ -16,9 +16,9 @@ RUN mkdir /home/tinysync/.ssh \
 && touch /home/tinysync/.ssh/authorized_keys \
 && chmod 600 /home/tinysync/.ssh/authorized_keys \
 && chown -R tinysync:tinysync /home/tinysync/.ssh \
-&& sed -i 's/^#PasswordAuthentication.*$/PasswordAuthentication no/' /etc/ssh/sshd_config \
-&& sed -i 's/^#PubkeyAuthentication.*$/PubkeyAuthentication yes/' /etc/ssh/sshd_config \
-&& sed -i 's/^#PermitRootLogin.*$/PermitRootLogin no/' /etc/ssh/sshd_config
+&& sed -e 's/^#PasswordAuthentication.*$/PasswordAuthentication no/' \
+       -e 's/^#PubkeyAuthentication.*$/PubkeyAuthentication yes/' \
+       -e 's/^#PermitRootLogin.*$/PermitRootLogin no/' -i /etc/ssh/sshd_config
 
 # Default environment
 ENV AUTHORIZED_KEYS none
