--- a/client/Makefile
+++ b/client/Makefile
@@ -1,22 +1,18 @@
-DOCKER=/bin/docker
-DOCKER_IMAGE_NAME=acch/tinysync-client
-DOCKER_BASE_NAME=ubuntu
-DOCKER_BASE_VERSION=latest
+DOCKER     := /bin/docker
+IMAGE_NAME := acch/tinysync
+IMAGE_TAG  := client-test
 
-default: build
+BUILDFLAGS := --no-cache --pull
+
+default: build test
 
 build:
-	$(DOCKER) pull $(DOCKER_BASE_NAME):$(DOCKER_BASE_VERSION)
-	$(DOCKER) build -t $(DOCKER_IMAGE_NAME) .
+	$(DOCKER) build $(BUILDFLAGS) -t $(IMAGE_NAME):$(IMAGE_TAG) .
+
+test:
+	$(DOCKER) run --rm $(IMAGE_NAME):$(IMAGE_TAG) ls -l /usr/local/bin/
+	$(DOCKER) run --rm $(IMAGE_NAME):$(IMAGE_TAG) ls -l /etc/systemd/system/
 
 push:
 	$(DOCKER) login
-	$(DOCKER) push $(DOCKER_IMAGE_NAME)
-
-test:
-	$(DOCKER) run --rm $(DOCKER_IMAGE_NAME) ls -l /usr/local/bin/
-	$(DOCKER) run --rm $(DOCKER_IMAGE_NAME) ls -l /etc/systemd/system/
-
-clean:
-	$(DOCKER) images -qf dangling=true | xargs --no-run-if-empty $(DOCKER) rmi
-	$(DOCKER) volume ls -qf dangling=true | xargs --no-run-if-empty $(DOCKER) volume rm
+	$(DOCKER) push $(IMAGE_NAME):$(IMAGE_TAG)
