Push images to docker.io

--- a/server/Makefile
+++ b/server/Makefile
@@ -7,11 +7,11 @@ BUILDFLAGS := --no-cache --pull
 default: build test
 
 build:
-	$(DOCKER) build $(BUILDFLAGS) -t $(IMAGE_NAME):$(IMAGE_TAG) .
+	$(DOCKER) build $(BUILDFLAGS) -t docker.io/$(IMAGE_NAME):$(IMAGE_TAG) .
 
 test:
-	$(DOCKER) run --rm --env AUTHORIZED_KEYS="test" $(IMAGE_NAME):$(IMAGE_TAG) -t
+	$(DOCKER) run --rm --env AUTHORIZED_KEYS="test" docker.io/$(IMAGE_NAME):$(IMAGE_TAG) -t
 
 push:
-	$(DOCKER) login
-	$(DOCKER) push $(IMAGE_NAME):$(IMAGE_TAG)
+	$(DOCKER) login docker.io
+	$(DOCKER) push docker.io/$(IMAGE_NAME):$(IMAGE_TAG)
