Push images to docker.io

--- a/client/Makefile
+++ b/client/Makefile
@@ -1,4 +1,4 @@
-DOCKER     := /bin/docker
+DOCKER     := /bin/podman
 IMAGE_NAME := acch/tinysync
 IMAGE_TAG  := client-test
 
@@ -7,12 +7,12 @@ BUILDFLAGS := --no-cache --pull
 default: build test
 
 build:
-	$(DOCKER) build $(BUILDFLAGS) -t $(IMAGE_NAME):$(IMAGE_TAG) .
+	$(DOCKER) build $(BUILDFLAGS) -t docker.io/$(IMAGE_NAME):$(IMAGE_TAG) .
 
 test:
-	$(DOCKER) run --rm $(IMAGE_NAME):$(IMAGE_TAG) ls -l /usr/local/bin/
-	$(DOCKER) run --rm $(IMAGE_NAME):$(IMAGE_TAG) ls -l /etc/systemd/system/
+	$(DOCKER) run --rm docker.io/$(IMAGE_NAME):$(IMAGE_TAG) ls -l /usr/local/bin/
+	$(DOCKER) run --rm docker.io/$(IMAGE_NAME):$(IMAGE_TAG) ls -l /etc/systemd/system/
 
 push:
-	$(DOCKER) login
-	$(DOCKER) push $(IMAGE_NAME):$(IMAGE_TAG)
+	$(DOCKER) login docker.io
+	$(DOCKER) push docker.io/$(IMAGE_NAME):$(IMAGE_TAG)
