--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
+      - name: Lint
+        uses: hadolint/hadolint-action@v2
+        with:
+          dockerfile: Dockerfile
+
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
