--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Lint
         uses: hadolint/hadolint-action@v2.0.0
         with:
-          dockerfile: Dockerfile
+          dockerfile: server/Dockerfile
 
       - name: Login to Docker Hub
         uses: docker/login-action@v1
@@ -31,7 +31,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
-          context: .
-          file: ./Dockerfile
+          context: server
+          file: server/Dockerfile
           push: true
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/tinysync:latest
