Make all targets phony

--- a/client/Makefile
+++ b/client/Makefile
@@ -6,16 +6,20 @@ BUILDFLAGS := --no-cache --pull
 
 default: build test
 
+.PHONY: lint
 lint:
 	$(DOCKER) run --rm -i hadolint/hadolint < Dockerfile
 
+.PHONY: build
 build:
 	$(DOCKER) build $(BUILDFLAGS) -t docker.io/$(IMAGE_NAME):$(IMAGE_TAG) .
 
+.PHONY: test
 test:
 	$(DOCKER) run --rm docker.io/$(IMAGE_NAME):$(IMAGE_TAG) ls -l /usr/local/bin/
 	$(DOCKER) run --rm docker.io/$(IMAGE_NAME):$(IMAGE_TAG) ls -l /etc/systemd/system/
 
+.PHONY: push
 push:
 	$(DOCKER) login docker.io
 	$(DOCKER) push docker.io/$(IMAGE_NAME):$(IMAGE_TAG)
